update css project

--- a/Gig.Framework.RuleEngin/Gig.Framework.RuleEngine.csproj
+++ b/Gig.Framework.RuleEngin/Gig.Framework.RuleEngine.csproj
@@ -6,6 +6,7 @@
         <AssemblyVersion>1.0.0.1</AssemblyVersion>
         <FileVersion>1.0.0.1</FileVersion>
         <LangVersion>latest</LangVersion>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
