--- a/Gig.Framework.Workflow.Contract/Gig.Framework.Workflow.Contract.csproj
+++ b/Gig.Framework.Workflow.Contract/Gig.Framework.Workflow.Contract.csproj
@@ -7,6 +7,7 @@
         <FileVersion>1.0.0.1</FileVersion>
         <LangVersion>latest</LangVersion>
         <PackageOutputPath>$(ProjectDir)..\nuget-output\</PackageOutputPath>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
 
