--- a/Gig.Framework.RuleEngin/Gig.Framework.RuleEngine.csproj
+++ b/Gig.Framework.RuleEngin/Gig.Framework.RuleEngine.csproj
@@ -2,11 +2,12 @@
 
     <PropertyGroup>
 
-        <Version>1.0.0.1</Version>
+         <Version>2.7.0.95</Version>
         <AssemblyVersion>1.0.0.1</AssemblyVersion>
         <FileVersion>1.0.0.1</FileVersion>
         <LangVersion>latest</LangVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -15,7 +16,7 @@
 
     <ItemGroup>
         <PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
-        <PackageReference Include="NRules" Version="0.9.2" />
+        <PackageReference Include="NRules" Version="0.9.4" />
         <PackageReference Include="NRules.RuleModel" Version="0.9.4" />
     </ItemGroup>
 
