--- a/Gig.Framework.Analyzer/Gig.Framework.Analyzer.csproj
+++ b/Gig.Framework.Analyzer/Gig.Framework.Analyzer.csproj
@@ -3,17 +3,19 @@
     <PropertyGroup>
 
 
-        <Version>1.0.0.1</Version>
+         <Version>2.7.0.95</Version>
         <AssemblyVersion>1.0.0.1</AssemblyVersion>
         <FileVersion>1.0.0.1</FileVersion>
         <LangVersion>latest</LangVersion>
         <NoPackageAnalysis>true</NoPackageAnalysis>
         <PackageOutputPath>$(ProjectDir)..\nuget-output\</PackageOutputPath>
+        <TargetFramework>net8.0</TargetFramework>
+
     </PropertyGroup>
   
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="all"/>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.0.1" PrivateAssets="all"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.11.0" PrivateAssets="all" />
         <PackageReference Update="NETStandard.Library" PrivateAssets="all"/>
     </ItemGroup>
 
