--- a/Gig.Framework.Api/Gig.Framework.Api.csproj
+++ b/Gig.Framework.Api/Gig.Framework.Api.csproj
@@ -1,21 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <Version>1.0.0.1</Version>
+        <Version>2.7.0.95</Version>
         <AssemblyVersion>1.0.0.1</AssemblyVersion>
         <FileVersion>1.0.0.1</FileVersion>
         <LangVersion>latest</LangVersion>
         <PackageOutputPath>$(ProjectDir)..\nuget-output\</PackageOutputPath>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <TargetFramework>net8.0</TargetFramework>
+
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="DevExtreme.AspNet.Data" Version="4.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="6.2.14" />
-        <PackageReference Include="Ocelot" Version="16.0.1" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
-        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.14" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="8.4.6" />
+        <PackageReference Include="Ocelot" Version="23.3.4" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.4.6" />
     </ItemGroup>
 
     <ItemGroup>
