--- a/Gig.Framework.Apllication.ReadModel/Gig.Framework.Application.ReadModel.csproj
+++ b/Gig.Framework.Apllication.ReadModel/Gig.Framework.Application.ReadModel.csproj
@@ -1,17 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <Version>1.0.0.1</Version>
+         <Version>2.7.0.95</Version>
         <AssemblyVersion>1.0.0.1</AssemblyVersion>
         <FileVersion>1.0.0.1</FileVersion>
         <LangVersion>latest</LangVersion>
         <PackageOutputPath>$(ProjectDir)..\nuget-output\</PackageOutputPath>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <TargetFramework>net8.0</TargetFramework>
+
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="DevExtreme.AspNet.Data" Version="2.8.6" />
-        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.14" />
+        <PackageReference Include="DevExtreme.AspNet.Data" Version="4.0.1" />
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.4.6" />
     </ItemGroup>
 
     <ItemGroup>
