--- a/Gig.Framework.Application/Gig.Framework.Application.csproj
+++ b/Gig.Framework.Application/Gig.Framework.Application.csproj
@@ -2,16 +2,18 @@
 
     <PropertyGroup>
 
-        <Version>1.0.0.1</Version>
+         <Version>2.7.0.95</Version>
         <AssemblyVersion>1.0.0.1</AssemblyVersion>
         <FileVersion>1.0.0.1</FileVersion>
         <LangVersion>latest</LangVersion>
         <PackageOutputPath>$(ProjectDir)..\nuget-output\</PackageOutputPath>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <TargetFramework>net8.0</TargetFramework>
+
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="MassTransit" Version="8.2.5" />
+        <PackageReference Include="MassTransit" Version="8.3.0" />
         <PackageReference Include="Quartz" Version="3.13.0" />
     </ItemGroup>
 
