--- a/Gig.Framework.Data.Elastic/Gig.Framework.Data.Elastic.csproj
+++ b/Gig.Framework.Data.Elastic/Gig.Framework.Data.Elastic.csproj
@@ -2,12 +2,14 @@
 
     <PropertyGroup>
 
-        <Version>1.0.0.1</Version>
+         <Version>2.7.0.95</Version>
         <AssemblyVersion>1.0.0.1</AssemblyVersion>
         <FileVersion>1.0.0.1</FileVersion>
         <LangVersion>latest</LangVersion>
         <PackageOutputPath>$(ProjectDir)..\nuget-output\</PackageOutputPath>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <TargetFramework>net8.0</TargetFramework>
+
     </PropertyGroup>
 
     <ItemGroup>
@@ -15,7 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
         <PackageReference Include="NEST" Version="7.17.5" />
     </ItemGroup>
 </Project>
