--- a/Gig.Framework.Facade/Gig.Framework.Facade.csproj
+++ b/Gig.Framework.Facade/Gig.Framework.Facade.csproj
@@ -2,12 +2,14 @@
 
     <PropertyGroup>
 
-        <Version>1.0.0.1</Version>
+         <Version>2.7.0.95</Version>
         <AssemblyVersion>1.0.0.1</AssemblyVersion>
         <FileVersion>1.0.0.1</FileVersion>
         <LangVersion>latest</LangVersion>
         <PackageOutputPath>$(ProjectDir)..\nuget-output\</PackageOutputPath>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <TargetFramework>net8.0</TargetFramework>
+
     </PropertyGroup>
 
     <ItemGroup>
