--- a/Gig.Framework.Persistence.Marten/Gig.Framework.Persistence.Marten.csproj
+++ b/Gig.Framework.Persistence.Marten/Gig.Framework.Persistence.Marten.csproj
@@ -6,6 +6,8 @@
         <Nullable>enable</Nullable>
         <AssemblyName>Gig.Framework.Persistence.Marten</AssemblyName>
         <RootNamespace>Gig.Framework.Persistence.Marten</RootNamespace>
+        <TargetFramework>net8.0</TargetFramework>
+
     </PropertyGroup>
 
     <ItemGroup>
