--- a/Gig.Framework.ReadModel/Gig.Framework.ReadModel.csproj
+++ b/Gig.Framework.ReadModel/Gig.Framework.ReadModel.csproj
@@ -2,18 +2,20 @@
 
     <PropertyGroup>
 
-        <Version>1.0.0.1</Version>
+         <Version>2.7.0.95</Version>
         <AssemblyVersion>1.0.0.1</AssemblyVersion>
         <FileVersion>1.0.0.1</FileVersion>
         <LangVersion>latest</LangVersion>
         <PackageOutputPath>$(ProjectDir)..\nuget-output\</PackageOutputPath>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <TargetFramework>net8.0</TargetFramework>
+
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="DevExtreme.AspNet.Data" Version="2.8.6" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" Version="6.0.0" />
+        <PackageReference Include="DevExtreme.AspNet.Data" Version="4.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" Version="8.0.10" />
     </ItemGroup>
 
     <ItemGroup>
